fix the bugs Co-authored-by: Derrick Bol <derrxb@users.noreply.github.com>

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -21,3 +21,13 @@ a {
   font-family: "burtons";
   src: url ("../public/Burtons.otf");
 }
+
+@layer components {
+  #__next {
+    @apply h-full w-full;
+  }
+  html,
+  body {
+    @apply h-full w-full;
+  }
+}
